--- a/src/app/builder/components/layout/menu/menu.component.html
+++ b/src/app/builder/components/layout/menu/menu.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-md navbar-light bg-light">
-  <a class="navbar-brand mat-icon-button d-flex align-items-center" href="#">
+  <a class="navbar-brand mat-icon-button d-flex align-items-center" href="javascript:void(0)">
     <i class="material-icons">home</i>
   </a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
@@ -9,39 +9,39 @@
   <div class="collapse navbar-collapse">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item">
-        <a class="nav-link" href="#" mat-raised-button color="primary">
+        <a class="nav-link" href="javascript:void(0)" mat-raised-button color="primary">
           <i class="material-icons">desktop_windows</i> Desktop
         </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#" mat-button>
+        <a class="nav-link" href="javascript:void(0)" mat-button>
           <i class="material-icons">smartphone</i> Smartphone
         </a>
       </li>
     </ul>
     <ul class="navbar-nav align-items-center">
       <li class="nav-item">
-        <a class="nav-link" mat-icon-button href="#" matTooltip="Undo" matTooltipPosition="below">
+        <a class="nav-link" mat-icon-button href="javascript:void(0)" matTooltip="Undo" matTooltipPosition="below">
           <i class="material-icons">undo</i>
         </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" mat-icon-button href="#" matTooltip="Redo" matTooltipPosition="below">
+        <a class="nav-link" mat-icon-button href="javascript:void(0)" matTooltip="Redo" matTooltipPosition="below">
           <i class="material-icons">redo</i>
         </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" mat-button href="#">
+        <a class="nav-link" mat-button href="javascript:void(0)">
           <i class="material-icons">save</i> Lưu
         </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" mat-raised-button href="#">
+        <a class="nav-link" mat-raised-button href="javascript:void(0)">
           <i class="material-icons">open_in_new</i> Xem trước
         </a>
       </li>
       <li class="nav-item">
-        <a mat-mini-fab color="warn" href="#" matTooltip="Thoát" matTooltipPosition="below">
+        <a mat-mini-fab color="warn" href="javascript:void(0)" matTooltip="Thoát" matTooltipPosition="below">
           <i class="material-icons">power_settings_new</i>
         </a>
       </li>
