--- a/src/app/builder/components/layout/toolbar/toolbar.component.html
+++ b/src/app/builder/components/layout/toolbar/toolbar.component.html
@@ -109,7 +109,7 @@
         </mat-menu>
       </li>
       <li>
-        <a href="#" title="" [matMenuTriggerFor]="layerMenu">
+        <a href="javascript:void(0)" title="" [matMenuTriggerFor]="layerMenu">
           <mat-icon>layers</mat-icon>
           <br/> Layer
         </a>
@@ -127,7 +127,7 @@
     </ul>
     <ul class="flex-row list-unstyled">
       <li>
-        <a href="#" title="" [matMenuTriggerFor]="settingMenu">
+        <a href="javascript:void(0)" title="" [matMenuTriggerFor]="settingMenu">
           <mat-icon>settings</mat-icon>
           <br/> Cài đặt
         </a>
