--- a/src/app/builder/components/edit-area/modal-image/modal-image.component.css
+++ b/src/app/builder/components/edit-area/modal-image/modal-image.component.css
@@ -66,7 +66,7 @@
 }
 
 .fallback h2 {
-    color: #1d1d1d;
+    color: #666;
     font-style: italic;
     position: absolute;
     top: 30%;
@@ -81,16 +81,14 @@
 }
 
 .fallback:hover h2 {
-    opacity: 1;
-    filter: alpha(opacity=100);
+    opacity: 0.5;
+    filter: alpha(opacity=50);
 }
 
-.fallback h2:before {
-    content: "\F0EE";
+.fallback h2 .mat-icon {
     width: 164px;
     height: 150px;
     text-align: center;
-    font-family: FontAwesome;
     font-size: 150px;
     display: block;
     margin: 0 auto 15px;
@@ -103,23 +101,23 @@
     border-color: royalblue;
 }
 
-.uploaded-list.row{margin: 0 -7px;}
-.uploaded-list.row .col-6{padding: 0 7px;}
+.uploaded-list.row {
+    margin: 0 -7px;
+}
+
+.uploaded-list.row .col-6 {
+    padding: 0 7px;
+}
+
 .uploaded-list .img {
     position: relative;
     margin-bottom: 15px;
-}
-
-.uploaded-list .img input[type="radio"] {
-    display: none;
-}
-
-.uploaded-list .img input[type="radio"]:checked+div {
-    outline: 4px solid #29e !important;
+    display: block;
+    overflow: hidden;
 }
 
 .uploaded-list .img-cover {
-    height: 110px;
+    height: 200px;
     border-radius: 5px;
     position: relative;
 }
@@ -142,10 +140,41 @@
     text-overflow: ellipsis;
 }
 
-.uploaded-list .img .btn {
+.uploaded-list .img .img-action {
+    position: absolute;
+    top: 3px;
+    right: 3px;
+}
+
+.uploaded-list .img .img-action button {
+    display: block;
+    margin-bottom: 5px;
+    transform: translateX(40px);
+    opacity: 0;
+    visibility: hidden;
+    transition: ease-in-out .3s
+}
+
+.uploaded-list .img .img-action button:nth-child(2) {
+    transform: translateX(120px)
+}
+
+.uploaded-list .img:hover .img-action button {
+    transform: none;
+    visibility: visible;
+    opacity: 1;
+}
+
+.btn-upload {
+    position: relative;
+}
+
+.btn-upload input[type=file] {
     position: absolute;
     top: 0;
-    right: 0;
-    padding: 1px 4px;
-    border-radius: 0
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 11;
+    opacity: 0;
 }
