--- a/src/app/builder/components/edit-area/widget-element/widget-element.component.css
+++ b/src/app/builder/components/edit-area/widget-element/widget-element.component.css
@@ -64,8 +64,30 @@ a {
 
 :host.ui-draggable {
     z-index: 100;
-    background-color: rgba(0, 0, 0, .3);
-    outline: 1px dashed #000 !important;
+    background-color: rgba(0, 0, 0, .1);
+    outline: 1px solid #00e5ff !important;
+}
+
+:host.ui-resizable-disabled {
+    background-color: transparent;
+    outline: none !important;
+    z-index: 99;
+}
+:host:hover{
+  outline: 1px solid #00e5ff !important;
+}
+.widget-edit {
+    position: absolute;
+    right: 0;
+    top: -38px;
+    width: 100%;
+    padding-bottom: 3px;
+    text-align: right;
+    display: block
+}
+
+:host.ui-resizable-disabled .widget-edit {
+    display: none;
 }
 
 .widget-element {
@@ -80,31 +102,28 @@ a {
     word-break: break-word;
     overflow-wrap: break-word;
     word-wrap: break-word;
+    position: relative;
 }
 
 .widget-content {
     cursor: all-scroll;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
     width: 100%;
     height: 100%;
-    align-items: center;
+    /* -webkit-box-align: center; */
+    -ms-flex-align: center;
+    /* align-items: center; */
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
 }
 
-.attach-edit:host .widget-content {
+.attach-edit .widget-content {
     cursor: text;
 }
-
-
-/* // h1.widget-content,
-// h2.widget-content,
-// h3.widget-content,
-// h4.widget-content,
-// h5.widget-content,
-// h6.widget-content,
-// p.widget-content,
-// a.widget-content {
-//   white-space: pre-wrap;
-// } */
 
 .widget-content .hline {
     width: 100%;
@@ -188,82 +207,4 @@ h6 {
     width: 100%;
     height: 100%;
     z-index: 89;
-}
-
-.ui-resizable-handle,
-.ui-resizable-handle {
-    width: 7px;
-    height: 7px;
-    background: #fff;
-    border: 1px solid #000;
-    z-index: 90;
-    display: block;
-}
-
-.ui-resizable-handle.n-resize,
-.ui-resizable-handle.n-resize {
-    left: 0;
-    right: 0;
-    margin: 0 auto;
-    top: -3.5px;
-    position: absolute;
-    cursor: n-resize;
-}
-
-.ui-resizable-handle.s-resize,
-.ui-resizable-handle.s-resize {
-    left: 0;
-    right: 0;
-    margin: 0 auto;
-    bottom: -3.5px;
-    position: absolute;
-    cursor: s-resize;
-}
-
-.ui-resizable-handle.nw-resize,
-.ui-resizable-handle.nw-resize {
-    left: -3.5px;
-    top: -3.5px;
-    position: absolute;
-    cursor: nw-resize;
-}
-
-.ui-resizable-handle.sw-resize,
-.ui-resizable-handle.sw-resize {
-    left: -3.5px;
-    bottom: -3.5px;
-    position: absolute;
-    cursor: sw-resize;
-}
-
-.ui-resizable-handle.se-resize,
-.ui-resizable-handle.se-resize {
-    right: -3.5px;
-    bottom: -3.5px;
-    position: absolute;
-    cursor: se-resize;
-}
-
-.ui-resizable-handle.ne-resize,
-.ui-resizable-handle.ne-resize {
-    right: -3.5px;
-    top: -3.5px;
-    position: absolute;
-    cursor: ne-resize;
-}
-
-.ui-resizable-handle.e-resize,
-.ui-resizable-handle.e-resize {
-    top: calc(50% - 3.5px);
-    right: -3.5px;
-    position: absolute;
-    cursor: e-resize;
-}
-
-.ui-resizable-handle.w-resize,
-.ui-resizable-handle.w-resize {
-    top: calc(50% - 3.5px);
-    left: -3.5px;
-    position: absolute;
-    cursor: w-resize;
 }
