--- a/src/styles.scss
+++ b/src/styles.scss
@@ -19,6 +19,7 @@ body {
     font-family: 'Roboto', sans-serif;
     font-size: 16px;
     color: #1d1d1d;
+    padding-block-end: 50px;
 }
 
 .mat-button {
@@ -143,160 +144,96 @@ ul[app-type="ul"][data-order="disc"]>li::before {
     content: counter(linum, disc);
 }
 
-#header{
-  z-index: 9999;
+#header {
+    z-index: 9999;
 }
 
-#resizable-section .ui-resizable-s,
-#resizable-section:before {
-    bottom: -15px;
-    left: calc(50% + 345px);
-    right: 0;
-    margin: 0 auto;
-    width: 30px
+app-section .ui-resizable-handle.ui-resizable-s{
+  height: 29px;
+  cursor: s-resize;
+  position: absolute;
+  bottom: -15px;
+  right: 50px;
+  margin: 0 auto;
+  width: 30px;
+  background: url(/assets/img/arrow-resize.png) !important
 }
-
-#resizable-section {
-    height: 100px;
-    width: 90%;
-    margin-left: 60px;
-    margin-right: 20px;
-    position: relative;
+app-element.ui-draggable-disabled .ui-resizable-handle {
     display: none;
-    z-index: 70
 }
 
-#resizable-section .ui-resizable-s {
-    height: 30px;
-    cursor: s-resize;
-    position: absolute
-}
-
-#resizable-section .edit-section {
-    box-shadow: 0 1px 3px rgba(13, 26, 44, .16), 0 5px 9px rgba(13, 26, 44, .2);
-    border-radius: 5px;
-    position: absolute;
-    right: 30px;
-    top: 0;
-    text-align: center;
-    background: #fff;
-    overflow: hidden;
-}
-
-#resizable-section .edit-section ul {
-    padding: 0;
-    margin: 0
-}
-
-#resizable-section .edit-section ul li {
-    list-style: none;
-    border-bottom: 1px solid #F0F3F5;
-    cursor: pointer;
-    padding-bottom: 0;
-    text-align: center;
-    vertical-align: middle
-}
-
-#resizable-section .edit-section ul li .svg-icons,
-#resizable-section .edit-section ul li i {
-    color: grey;
-    fill: grey;
-    padding: 6px;
-    font-size: 20px;
-    display: inline-block
-}
-
-#resizable-section .edit-section ul li:last-child {
-    border: 0
-}
-
-#resizable-section .edit-section ul li:hover {
-    background: #F0F3F5
-}
-
-#resizable-section.ui-widget-content {
-    border: 0!important
-}
-
-#resizable-section .ui-resizable-s {
-    height: 30px;
-    cursor: s-resize;
-    position: absolute;
-    bottom: -15px;
-    right: 50px;
-    margin: 0 auto;
-    width: 30px;
-    background: url(/assets/img/arrow-resize.png) !important
-}
-
-.ui-resizable-handle {
-    width: 7px;
-    height: 7px;
-    background: #fff;
-    border: 1px solid #000;
-    z-index: 90;
-    display: block;
-    position: absolute;
-}
-
-.ui-resizable-handle.ui-resizable-n {
-    left: 0;
-    right: 0;
-    margin: 0 auto;
-    top: -3.5px;
-    position: absolute;
-    cursor: n-resize;
-}
-
-.ui-resizable-handle.ui-resizable-s {
-    left: 0;
-    right: 0;
-    margin: 0 auto;
-    bottom: -3.5px;
-    position: absolute;
-    cursor: s-resize;
-}
-
-.ui-resizable-handle.ui-resizable-nw {
-    left: -3.5px;
-    top: -3.5px;
-    position: absolute;
-    cursor: nw-resize;
-}
-
-.ui-resizable-handle.ui-resizable-sw {
-    left: -3.5px;
-    bottom: -3.5px;
-    position: absolute;
-    cursor: sw-resize;
-}
-
-.ui-resizable-handle.ui-resizable-se {
-    right: -3.5px;
-    bottom: -3.5px;
-    position: absolute;
-    cursor: se-resize;
-}
-
-.ui-resizable-handle.ui-resizable-ne {
-    right: -3.5px;
-    top: -3.5px;
-    position: absolute;
-    cursor: ne-resize;
-}
-
-.ui-resizable-handle.ui-resizable-e {
-    top: calc(50% - 3.5px);
-    right: -3.5px;
-    position: absolute;
-    cursor: e-resize;
-}
-
-.ui-resizable-handle.ui-resizable-w {
-    top: calc(50% - 3.5px);
-    left: -3.5px;
-    position: absolute;
-    cursor: w-resize;
+app-element {
+    .ui-resizable-handle {
+        z-index: 90;
+        display: block;
+        background-color: #00e5ff;
+        border: 2px solid #fff;
+        height: 10px;
+        width: 10px;
+        overflow: visible;
+        position: absolute;
+        -moz-border-radius: 1px !important;
+        border-radius: 1px !important;
+        -moz-box-shadow: 0 0 2px rgba(13, 26, 44, 0.12), 0 1px 1px rgba(13, 26, 44, 0.24);
+        box-shadow: 0 0 2px rgba(13, 26, 44, 0.12), 0 1px 1px rgba(13, 26, 44, 0.24);
+    }
+    .ui-resizable-handle::before {
+        content: '';
+        display: block;
+        position: absolute;
+        top: 50%;
+        width: 21px;
+        height: 21px;
+        margin-left: -7px;
+        margin-top: -11px;
+        z-index: inherit;
+    }
+    .ui-resizable-handle.ui-resizable-n,
+    .ui-resizable-handle.ui-resizable-s {
+        left: 50%;
+        margin-left: -5px;
+    }
+    .ui-resizable-handle.ui-resizable-n {
+        top: -5px;
+        cursor: n-resize;
+    }
+    .ui-resizable-handle.ui-resizable-s {
+        bottom: -5px;
+        cursor: s-resize;
+    }
+    .ui-resizable-handle.ui-resizable-e,
+    .ui-resizable-handle.ui-resizable-w {
+        top: 50%;
+        margin-top: -5px;
+    }
+    .ui-resizable-handle.ui-resizable-e {
+        right: -5px;
+        cursor: e-resize;
+    }
+    .ui-resizable-handle.ui-resizable-w {
+        left: -5px;
+        cursor: w-resize;
+    }
+    .ui-resizable-handle.ui-resizable-nw {
+        left: -5px;
+        top: -5px;
+        cursor: nw-resize;
+    }
+    .ui-resizable-handle.ui-resizable-sw {
+        left: -5px;
+        bottom: -5px;
+        cursor: sw-resize;
+    }
+    .ui-resizable-handle.ui-resizable-se {
+        right: -5px;
+        bottom: -5px;
+        cursor: se-resize;
+    }
+    .ui-resizable-handle.ui-resizable-ne {
+        right: -5px;
+        top: -5px;
+        cursor: ne-resize;
+    }
 }
 
 .widget-container {
@@ -305,68 +242,80 @@ ul[app-type="ul"][data-order="disc"]>li::before {
     margin: 0 auto;
 }
 
+.cdk-overlay-container {
+    z-index: 99999;
+}
+
+.cdk-overlay-pane {
+    margin-left: auto !important;
+    margin-right: auto!important
+}
+
 #v-ruler {
-  pointer-events: auto;
-  position: fixed;
-  bottom: 0;
-  z-index: 100;
-  padding-left: 23px;
-  width: 100%;
-  left: 0;;
-  background-color: rgba(255, 255, 255, .7);
-  background-color: rgba(255, 255, 255, 0.7);
-  -webkit-box-shadow: 0 0 1px rgba(0, 0, 0, 0.5);
-  box-shadow: 0 0 1px rgba(0, 0, 0, 0.5);
+    pointer-events: auto;
+    position: fixed;
+    top: 123px;
+    z-index: 100;
+    padding-left: 23px;
+    width: 100%;
+    left: 0;
+    background-color: rgba(255, 255, 255, .7);
+    background-color: rgba(255, 255, 255, 0.7);
+    -webkit-box-shadow: 0 0 1px rgba(0, 0, 0, 0.5);
+    box-shadow: 0 0 1px rgba(0, 0, 0, 0.5);
 }
 
 #v-ruler .numbers {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  background: url(/assets/img/ruler_horizontal.png) repeat-x left -22px top;
+  background: url(/assets/img/ruler_horizontal.png) repeat-x left 0 top;
   height: 22px;
-  text-indent: -22px;
 }
 
 #v-ruler .numbers .number {
-  display: inline-block;
-  width: 100px;
-  text-align: left;
-  padding: 5px 0 0 5px;
-  font-size: 10px;
-  color: #666
+    display: inline-block;
+    width: 100px;
+    text-align: left;
+    padding: 5px 0 0 5px;
+    font-size: 10px;
+    color: #666
 }
 
 #v-ruler .numbers .number:last-child {
-  width: auto;
+    width: auto;
 }
+
 #h-ruler {
-  height: 100%;
-  pointer-events: auto;
-  position: absolute;
-  left: 0;
-  top: 0;
-  z-index: 99;
-  padding-top: 23px;
-  background-color: rgba(255, 255, 255, .7);
-  -webkit-box-shadow: 0 0 1px rgba(0, 0, 0, 0.5);
-   box-shadow: 0 0 1px rgba(0, 0, 0, 0.5);
+    height: 100%;
+    pointer-events: auto;
+    position: absolute;
+    left: 0;
+    top: 0;
+    z-index: 99;
+    padding-top: 23px;
+    background-color: rgba(255, 255, 255, .7);
+    -webkit-box-shadow: 0 0 1px rgba(0, 0, 0, 0.5);
+    box-shadow: 0 0 1px rgba(0, 0, 0, 0.5);
 }
 
 #h-ruler .numbers {
-  background: url(/assets/img/ruler_vertical.png) repeat-y left top;
-  width: 22px;
-  height: 100%;
+    background: url(/assets/img/ruler_vertical.png) repeat-y left top;
+    width: 22px;
+    height: 100%;
+    overflow: hidden;
 }
 
 #h-ruler .numbers .number {
-  display: block;
-  height: 100px;
-  width: 10px;
-  text-align: right;
-  padding: 1px 0 0 13px;
-  font-size: 10px;
-  color: #666;
-  word-break: break-all;
-  line-height: 1.4;
+    display: block;
+    height: 100px;
+    width: 10px;
+    text-align: right;
+    padding: 1px 0 0 13px;
+    font-size: 10px;
+    color: #666;
+    word-break: break-all;
+    line-height: 1.4;
 }
+app-widget-edit-section{display: none}
+app-section:hover app-widget-edit-section{display: block;}
