--- a/src/app/builder/components/edit-area/widget-element/widget-element.component.css
+++ b/src/app/builder/components/edit-area/widget-element/widget-element.component.css
@@ -112,9 +112,7 @@ a {
     display: flex;
     width: 100%;
     height: 100%;
-    /* -webkit-box-align: center; */
-    -ms-flex-align: center;
-    /* align-items: center; */
+    justify-content: center;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
     -ms-flex-direction: column;
