--- a/src/app/builder/components/edit-area/edit-content/edit-content.component.html
+++ b/src/app/builder/components/edit-area/edit-content/edit-content.component.html
@@ -1,6 +1,6 @@
 <div id="edit-content">
-  <app-widget-vruler id="v-ruler"></app-widget-vruler>
-  <app-widget-hruler id="h-ruler"></app-widget-hruler>
+  <app-widget-vruler></app-widget-vruler>
+  <app-widget-hruler></app-widget-hruler>
   <app-section *ngFor="let section of sectionActionService.sections" [ngStyle]="section.rect | convertRect" [section]="section" [attr.data-id]="section.id"></app-section>
   <div id="diver-line-x"></div>
   <div id="diver-line-y"></div>
