--- a/src/styles.scss
+++ b/src/styles.scss
@@ -15,13 +15,32 @@ $accent: mat-palette($mat-orange,
 $theme: mat-light-theme($primary,
 $accent);
 @include angular-material-theme($theme);
+html,
+body {
+    height: 100%;
+}
+
 body {
     font-family: 'Roboto', sans-serif;
     font-size: 16px;
     color: #1d1d1d;
-    padding-bottom: 50px;
-    overflow-x: hidden;
+    overflow: hidden;
 }
+
+::-webkit-scrollbar {
+  width: 8px;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #999;
+  border-radius: 20px;
+}
+
+::-webkit-scrollbar-track {
+  background: #ddd;
+  border-radius: 20px;
+}
+
 
 .mat-button {
     color: rgba(0, 0, 0, .5)
@@ -31,7 +50,10 @@ body {
     transform: rotate(90deg);
     margin-top: -2px;
 }
-
+.mat-expansion-panel-header{padding: 0 10px !important}
+.mat-expansion-panel-body{padding: 0 10px 10px !important}
+.mat-expansion-panel-header-description{flex-grow: 0 !important}
+.mat-form-field{display: block !important}
 a,
 button {
     outline: none !important;
@@ -289,12 +311,14 @@ app-element {
     color: #666;
     text-indent: -19px
 }
-#v-ruler .numbers .number:first-child{text-indent: -15px;}
+
+#v-ruler .numbers .number:first-child {
+    text-indent: -15px;
+}
 
 // #v-ruler .numbers .number:last-child {
 //     width: auto;
 // }
-
 #h-ruler {
     height: 100%;
     pointer-events: auto;
@@ -327,12 +351,20 @@ app-element {
     line-height: 1.4;
     transform: translateY(-23px);
 }
-#h-ruler .numbers .number:first-child{visibility: hidden}
+
+#h-ruler .numbers .number:first-child {
+    visibility: hidden
+}
 
 app-widget-edit-section {
-    display: none
+    visibility: hidden
 }
 
 app-section:hover app-widget-edit-section {
-    display: block;
+    visibility: visible
+}
+
+.mat-drawer-content {
+    overflow-x: hidden;
+    overflow-y: auto
 }
