--- a/src/app/builder/components/edit-area/edit-content/edit-content.component.scss
+++ b/src/app/builder/components/edit-area/edit-content/edit-content.component.scss
@@ -1,13 +1,13 @@
 :host {
     display: block;
 }
-
 #edit-content {
     line-height: 18px;
     color: #000;
     background-color: #fff;
     box-shadow: 0 5px 20px 0 rgba(0, 0, 0, 0.03);
     position: relative;
+    height: 100%;
 }
 
 app-section {
