--- a/src/styles.scss
+++ b/src/styles.scss
@@ -168,7 +168,7 @@ ul[app-type="ul"][data-order="disc"]>li::before {
 }
 
 #header {
-    z-index: 99999999;
+    z-index: 9999;
 }
 
 app-section>.ui-resizable-handle.ui-resizable-s {
