--- a/src/app/builder/components/edit-area/edit-content/edit-content.component.scss
+++ b/src/app/builder/components/edit-area/edit-content/edit-content.component.scss
@@ -34,6 +34,6 @@ app-section {
 #diver-line-x,
 #diver-line-y {
     position: absolute;
-    z-index: 999999999;
+    z-index: 999;
     display: none;
 }
