--- a/src/app/builder/components/layout/settingbar/settingbar.component.html
+++ b/src/app/builder/components/layout/settingbar/settingbar.component.html
@@ -6,11 +6,12 @@
         <mat-panel-title>Thiết lập chữ</mat-panel-title>
       </mat-expansion-panel-header>
       <mat-form-field>
-        <input matInput placeholder="Màu chữ" cpPosition="bottom" [(colorPicker)]="selectedComponent.contentStyle['color']"
-         [style.background]="selectedComponent.contentStyle.color" readonly [value]="selectedComponent.contentStyle.color">
+        <input matInput placeholder="Màu chữ" cpPosition="bottom" [(colorPicker)]="selectedComponent.contentStyle['color']" [style.background]="selectedComponent.contentStyle.color"
+          readonly [value]="selectedComponent.contentStyle.color">
       </mat-form-field>
       <mat-form-field>
-        <input type="text" matInput placeholder="Cỡ chữ" [(value)]="selectedComponent.contentStyle['font-size']">
+        <input type="number" matInput placeholder="Cỡ chữ" [value]="selectedComponent.contentStyle['font-size'].split('px')[0]"
+         (input)="selectedComponent.contentStyle['font-size'] = $event.target.value+'px'">
         <span matSuffix>px</span>
       </mat-form-field>
       <mat-form-field>
@@ -24,12 +25,12 @@
         </mat-panel-title>
       </mat-expansion-panel-header>
       <mat-form-field>
-          <mat-select placeholder="Kiểu tiêu đề">
-            <mat-option *ngFor="let i of [1,2,3,4,5,6]">
-              Tiêu đề {{i}}
-            </mat-option>
-          </mat-select>
-        </mat-form-field>
+        <mat-select placeholder="Kiểu tiêu đề">
+          <mat-option *ngFor="let i of [1,2,3,4,5,6]">
+            Tiêu đề {{i}}
+          </mat-option>
+        </mat-select>
+      </mat-form-field>
     </mat-expansion-panel>
   </mat-accordion>
 </div>
