sửa màu chữ, font size, kiểu font

--- a/src/app/builder/components/edit-area/edit-content/edit-content.component.html
+++ b/src/app/builder/components/edit-area/edit-content/edit-content.component.html
@@ -1,3 +1,4 @@
+<link [href]="fontUrl()" rel="stylesheet">
 <div id="edit-content">
   <app-widget-vruler></app-widget-vruler>
   <app-widget-hruler></app-widget-hruler>
